assets/css/style.css
/*=================================================================
Template Name: BioTech - Dark
Author: Aroy
=================================================================*/
:root {
    --text-light: #bad8dd;
    --text-darker: #000;
}


@font-face {
    font-family: "BlackOpsOne";
    src: url(/fonts/BlackOpsOne-Regular.ttf);
}

html {
    background-color: #0f1e31;
    color: var(--text-light, #bad8dd);
    scrollbar-color: #ff00d4 #040b1e;
    scrollbar-width: thin;
    scroll-behavior: smooth;
}

html:not([hide-scrollbar]) ::-webkit-scrollbar-thumb {
    background: var(--main-color, #ff00d4) !important;
}

html:not([hide-scrollbar]) ::-webkit-scrollbar {
    width: 8px !important;
}

::-webkit-scrollbar-track {
    background: #040b1e !important;
}

::-webkit-scrollbar-thumb {
    background: var(--main-color, #ff00d4) !important;
}

body {
    background-color: #040b1e;
    font-family: "Roboto Mono", sans-serif;
    color: var(--text-light, #bad8dd);
    -webkit-font-smoothing: antialiased;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 500;
    font-family: "BlackOpsOne", sans-serif;
    color: #afbac4;
}

p {
    font-family: "Roboto Mono", sans-serif;
}

[scroll-behavior=smooth] {
    scroll-behavior: smooth;
}

pre {
    color: #afbac4;
}


/*=================================================================
  Basic Setup
=================================================================*/
::-moz-selection {
    /* Firefox Code */
    color: #57cbcc;
    background: #750cf2;
}

::selection {
    color: #57cbcc;
    font-weight: bold;
    background: #750cf2;
}

hr {
    border-top: 1px solid rgba(255, 255, 255, .1);
}

figure {
    margin: 0;
}

iframe {
    border: 0;
}

a {
    color: #c910c9;
    background-image: linear-gradient(currentColor, currentColor);
    background-position: 0% 100%;
    background-repeat: no-repeat;
    background-size: 0% 2px;
    transition: all .3s ease-in 0s;
}

a,
a:focus,
a:hover {
    text-decoration: none;
    outline: 0;
}

a:focus,
a:hover {
    color: #57cbcc;
    background-size: 100% 2px;
}

p img {
    width: 100%;
    height: auto;
}

blockquote {
    display: block;
    padding: 3px 2px 3px 3px;
    margin: 0;
    font-family: amiri,times new roman,georgia,serif;
    font-size: 1.25rem;
    font-style: italic;
    position: relative;
    background-color: #046293;
    border-width: .1rem .1rem .1rem .25rem;
    border-radius: 0 5px 0 5px;
    border-style: solid;
}

code:not(pre.chroma>code) {
    font-size: .875em;
    color: #d63384;
    word-wrap: break-word;
    background-color: #212121;
    padding: 2px;
    border: #14171c 2px solid;
    border-radius: 8px;
}

table {
    width: 100%;
    border: 1px solid #750cf2;
    border-collapse: collapse;
}

table, tr:nth-of-type(odd) {
    background: #020120;
}

table, td {
    border-width: 0 1px 0 1px;
    border-style: dashed;
    font-size: 16px;
}

table, th {
    border: 1px solid #750cf2;
    background: #040b2e;
}

table, td, th {
    padding: 6px; 
}

.hidden {
    display: none;
}

.kill-margin-bottom {
    margin-bottom: 0 !important;
}

.margin-top-20 {
    margin-top: 20px;
}

.padding-0 {
    padding: 0 !important;
}

.md-50 {
    margin-bottom: 50px;
}

.btn {
    background-color: transparent;
    color: #fff;
    padding: 10px 30px;
    border-radius: 5px;
    transition: all .3s ease-in 0s;
}

.btn:focus {
    color: #ddd;
    border-radius: 15px;
}

.btn-transparent {
    border: 1px solid #4e595f;
}

.btn-transparent:hover,
.btn-transparent:focus {
    background-color: #ff00b31f;
    border: 1px solid transparent;
    color: #fff;
}

.border-Rinkusu {
    border-top: 2px solid rgba(236, 239, 241, 0.07);
    height: 1px;
    margin: 15px auto 0;
    position: relative;
    width: 30%;
}

.border-Rinkusu:before {
    background-color: #fff;
    content: '';
    height: 6px;
    left: 50%;
    margin-left: -20px;
    position: absolute;
    top: -4px;
    width: 50px;
    background-color: #57cbcc;
}

.border-glow {
    box-shadow: 0 4px 8px 0 rgb(4, 0, 255), 0 6px 20px 0 rgb(204, 0, 255);
}
.border-glow-2 {
    box-shadow: 8px -8px 10px 0px rgb(4, 0, 255), -8px 8px 10px 0px rgb(204, 0, 255);
    border-radius: 5px;
}

.border-gradient {
    position: relative;
    width: 450px;
    padding: 40px 0;
    font-size: 5em;
    color: #fff;
    text-align: center;
    letter-spacing: 5px;
    background-color: #020117;
}

.border-gradient::after {
    content: '';
    position: absolute;
    top: -5px;
    left: -5px;
    right: -5px;
    bottom: -5px;
    background: linear-gradient(45deg, #ffd800, #ff5520, #750cf2, #0cbcf2);
    z-index: -1;
}

.border-gradient::before {
    content:  '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(45deg, #ffd800, #ff5520, #750cf2, #0cbcf2);
    z-index: -2;
    filter: blur(40px);
}

.color {
    color: #6cb670;
}

.sub-title {
    padding: 0 0 50px;
}

.sub-title>h3 {
    border-left: 3px solid #ddd;
    border-right: 3px solid #ddd;
    display: inline-block;
    padding: 5px 25px;
    text-transform: uppercase;
}

.btn.active:focus,
.btn:active:focus,
.btn:focus {
    outline: 0;
}

.bg-one {
    background-color: #0f1e31;
    padding-top: 16px;
    border-radius: 18px;
}

.bg-two {
    background: #0f1e31;
}

.parallax-section {
    background-attachment: fixed !important;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}

.no-padding {
    padding: 0 !important;
}

.inline-block {
    display: inline-block;
}

.btn {
    cursor: pointer;
}

.btn.focus,
.btn:focus {
    box-shadow: none;
}

.btn-main {
    background: #57cbcc;
    color: #fff;
    display: inline-block;
    font-size: 16px;
    font-weight: bold;
    letter-spacing: 1px;
    padding: 10px 35px;
    text-transform: uppercase;
}

.btn-main:hover {
    background: #2c9091;
    color: #fff;
}

.mt-20 {
    margin-top: 20px;
}
/* ... */

